--- a/Valhallan Ice Warriors/Data/Core/Languages/English/Actions.xml
+++ b/Valhallan Ice Warriors/Data/Core/Languages/English/Actions.xml
@@ -2,36 +2,36 @@
 <language>
     <entry name="AstraMilitarum/Ura" value="Ura!"/>
     <entry name="AstraMilitarum/UraDescription" value="Inspires Valhallans within 3 tiles to advance with decreased morale loss, increased damage, and increased damage resistance. Requires 4 allied infantry (where at least 2 of those are Valhallans) within 3 tiles to activate."/>
-    <entry name="AstraMilitarum/UraFlavor" value="Many foes know what it's like to face a mass infantry charge. Typically, these will be hordes of flesh firing inaccurately, which makes for easy pickings for well-fortified positions. Valhallans are the exception. After hours of being pummelled by artillery, beleaguered defenders will hear a hearty cry of &quot;URAAAAA!&quot; before an endless wave of Valhallans descends upon them. Inexplicably, these mere men and women seem harder to kill, with some reports of prisoners swearing they shot someone thrice in the chest without the Valhallan falling."/>
+    <entry name="AstraMilitarum/UraFlavor" value="Many foes know what it's like to face a mass infantry charge. Typically, these will be uncoordinated hordes of flesh firing inaccurately, which makes for easy pickings for well-fortified positions. Valhallans are the exception. After hours of being pummelled by artillery, beleaguered defenders will hear a hearty cry of &quot;URAAAAA!&quot; before an endless wave of Valhallans descends upon them. Inexplicably, these mere men and women seem harder to kill, with some reports of prisoners swearing they shot someone thrice in the chest without the Valhallan falling."/>
     <!-- Hound Master Deploy -->
     <entry name="AstraMilitarum/DeployValhallanDogsScout" value="Deploy <string name='Units/AstraMilitarum/ValhallanDogsScout'/>"/>
     <entry name="AstraMilitarum/DeployValhallanDogsScoutDescription" value="Spawns a permanent, mortal unit. <string name='Units/AstraMilitarum/ValhallanDogsScoutDescription'/>"/>
-    <entry name="AstraMilitarum/DeployValhallanDogsScoutFlavor" value=""/>
+    <entry name="AstraMilitarum/DeployValhallanDogsScoutFlavor" value="<string name='Units/AstraMilitarum/ValhallanDogsScoutFlavor'/>"/>
     <entry name="AstraMilitarum/DeployValhallanAntiTankDogsKrak" value="Deploy <string name='Units/AstraMilitarum/ValhallanAntiTankDogsKrak'/>"/>
     <entry name="AstraMilitarum/DeployValhallanAntiTankDogsKrakDescription" value="Spawns a permanent, mortal unit. <string name='Units/AstraMilitarum/ValhallanAntiTankDogsKraksDescription'/>"/>
-    <entry name="AstraMilitarum/DeployValhallanAntiTankDogsKrakFlavor" value=""/>
+    <entry name="AstraMilitarum/DeployValhallanAntiTankDogsKrakFlavor" value="<string name='Units/AstraMilitarum/ValhallanAntiTankDogsKrakFlavor'/>"/>
     <entry name="AstraMilitarum/DeployValhallanAntiTankDogsMelta" value="Deploy <string name='Units/AstraMilitarum/ValhallanAntiTankDogsMelta'/>"/>
     <entry name="AstraMilitarum/DeployValhallanAntiTankDogsMeltaDescription" value="Spawns a permanent, mortal unit. <string name='Units/AstraMilitarum/ValhallanAntiTankDogsMeltaDescription'/>"/>
-    <entry name="AstraMilitarum/DeployValhallanAntiTankDogsMeltaFlavor" value=""/>
+    <entry name="AstraMilitarum/DeployValhallanAntiTankDogsMeltaFlavor" value="<string name='Units/AstraMilitarum/ValhallanAntiTankDogsKrakFlavor'/>"/>
     <!-- Commissar -->
     <entry name="AstraMilitarum/Gulag" value="Send to Gulag"/>
     <entry name="AstraMilitarum/GulagDescription" value="Target an infantry unit with less than 10% health, surrounded by 3 Valhallans. Remove this unit and gain Ore and Influence."/>
-    <entry name="AstraMilitarum/GulagFlavor" value=""/>
+    <entry name="AstraMilitarum/GulagFlavor" value="Prisoners, whether they be enemies from within or from without, cost resources to maintain. They must be fed, sheltered, and most importantly, monitored. The only way to make this more worthwhile than simply putting a las-bolt through the head is to find a way to extract value. Valhallan planetary governors established forced labour camps to intern enemies of the state, and while there is no shortage of those, certain prisoners of war or seditious Guardsmen may find their way to these camps, where they dig through the icy ground until they themselves are a part of it."/>
     <entry name="AstraMilitarum/DeployValhallanBarrierSquad" value="Deploy <string name='Units/AstraMilitarum/ValhallanBarrierSquad'/>"/>
     <entry name="AstraMilitarum/DeployValhallanBarrierSquadDescription" value="Spawns a permanent, mortal unit that supports nearby allies but cannot move. <string name='Units/AstraMilitarum/ValhallanBarrierSquadDescription'/>"/>
-    <entry name="AstraMilitarum/DeployValhallanBarrierSquadFlavor" value=""/>
+    <entry name="AstraMilitarum/DeployValhallanBarrierSquadFlavor" value="<string name='Units/AstraMilitarum/ValhallanBarrierSquadFlavor'/>"/>
     <entry name="AstraMilitarum/NotOneStepBack" value="Not one step back!"/>
     <!-- Barrier Squad Aura -->
     <entry name="AstraMilitarum/BarrierSquadAura" value="Barrier Squad's Watch"/>
     <entry name="AstraMilitarum/BarrierSquadAuraDescription" value="Improves morale for allied infantry within 3 tiles."/>
-    <entry name="AstraMilitarum/BarrierSquadAuraFlavor" value=""/>
+    <entry name="AstraMilitarum/BarrierSquadAuraFlavor" value="&quot;Run? Frak that! It'll either be their guns or ours, and I'll be damned if I forfeit my familial compensation!&quot; - Unnamed Valhallan Guardsman"/>
     <!-- Commander -->
     <entry name="AstraMilitarum/HoldTheLine" value="Hold the Line"/>
     <entry name="AstraMilitarum/HoldTheLineDescription" value="Grants bonuses to allied infantry. Radius is increased upon levelling up this ability. <string name='Traits/HoldTheLineDescription'/>"/>
-    <entry name="AstraMilitarum/HoldTheLineFlavor" value=""/>
+    <entry name="AstraMilitarum/HoldTheLineFlavor" value="&quot;Side by side with the Astra Militarum, the entire Valhallan people is rising in defence of our native land!&quot;"/>
     <entry name="AstraMilitarum/ThePeoplesCommissar" value="The People's Commissar"/>
     <entry name="AstraMilitarum/ThePeoplesCommissarDescription" value="Grants buffs and instant healing to allied infantry. Duration is increased upon levelling up this ability. <string name='Traits/ThePeoplesCommissarDescription'/>"/>
-    <entry name="AstraMilitarum/ThePeoplesCommissarFlavor" value=""/>
+    <entry name="AstraMilitarum/ThePeoplesCommissarFlavor" value="Typically, Valhallan senior leadership enforce discipline by the point of many bolt pistols. The most experienced among them know when it's better to catch flies with honey; allowing their men to have more luxurious rations can, at times, motivate them better than any threats. Good Marshals know too much honey will fatten the men beyond usefulness; bad ones don't live long enough to internalise this lesson. Gifts must be held by a strong hand, and the men must not forget who is feeding them."/>
     <entry name="AstraMilitarum/DefendThisStrongpoint" value="Defend this Strongpoint"/>
     <entry name="AstraMilitarum/DefendThisStrongpointDescription" value="Target an allied Fortification that is not a Headquarters. The tiles around it grant increased defence. <string name='Traits/AstraMilitarum/StrongpointReinforcedDescription'/>"/>
     <entry name="AstraMilitarum/DefendThisStrongpointFlavor" value=""/>
