--- a/Valhallan Ice Warriors/Data/Core/Languages/English/Actions.xml
+++ b/Valhallan Ice Warriors/Data/Core/Languages/English/Actions.xml
@@ -34,21 +34,21 @@
     <entry name="AstraMilitarum/ThePeoplesCommissarFlavor" value="Typically, Valhallan senior leadership enforce discipline by the point of many bolt pistols. The most experienced among them know when it's better to catch flies with honey; allowing their men to have more luxurious rations can, at times, motivate them better than any threats. Good Marshals know too much honey will fatten the men beyond usefulness; bad ones don't live long enough to internalise this lesson. Gifts must be held by a strong hand, and the men must not forget who is feeding them."/>
     <entry name="AstraMilitarum/DefendThisStrongpoint" value="Defend this Strongpoint"/>
     <entry name="AstraMilitarum/DefendThisStrongpointDescription" value="Target an allied Fortification that is not a Headquarters. The tiles around it grant increased defence. <string name='Traits/AstraMilitarum/StrongpointReinforcedDescription'/>"/>
-    <entry name="AstraMilitarum/DefendThisStrongpointFlavor" value=""/>
+    <entry name="AstraMilitarum/DefendThisStrongpointFlavor" value="&quot;The enemy cannot take hold of this position! If they gain a foothold here in the bank, they can cross the river and tear our defensive line asunder! Send the 327th with 2 penal battalions as a diversionary attack to the southern flank, while the 791st and 564th move to reinforce Sergeant Pavlov.&quot;"/>
     <entry name="AstraMilitarum/TheMotherlandCalls" value="The Motherland Calls"/>
     <entry name="AstraMilitarum/TheMotherlandCallsDescription" value="Grants bonuses to allied infantry that are within 5 tiles of an allied city. <string name='Traits/TheMotherlandCallsDescription'/>"/>
-    <entry name="AstraMilitarum/TheMotherlandCallsFlavor" value=""/>
+    <entry name="AstraMilitarum/TheMotherlandCallsFlavor" value="Be glorified, our free Motherland, lead us to the triumph of the Imperium!"/>
     <!-- Night Witches -->
-    <entry name="AstraMilitarum/NightBomber" value="Night Bomber"/>
+    <entry name="AstraMilitarum/NightBomber" value="Night Attack"/>
     <entry name="AstraMilitarum/NightBomberDescription" value="<string name='Traits/AstraMilitarum/NightBomberDescription'/>"/>
-    <entry name="AstraMilitarum/NightBomberFlavor" value=""/>
+    <entry name="AstraMilitarum/NightBomberFlavor" value="Executing strategic bombing runs during broad daylight makes it easy for bombers to find their marks, but it also makes it easier for the enemy to detect and shoot down your raiding force. Night raids, with pilots prepared for them, offer greater success in preserving manpower. At night, bombers can be shrouded in the sky's darkness; factory furnaces and fortification searchlights, when not completely covered, become enticing targets, beaming in the dark."/>
     <entry name="AstraMilitarum/FlyLow" value="Idle Engines"/>
     <entry name="AstraMilitarum/FlyLowDescription" value="<string name='Traits/AstraMilitarum/FlyLowDescription'/> <string name='Traits/AstraMilitarum/FlyLowSlowdownDescription'/>"/>
-    <entry name="AstraMilitarum/FlyLowFlavor" value=""/>
+    <entry name="AstraMilitarum/FlyLowFlavor" value="Sentries are trained to listen for the sound of engines overhead, distinguishing between friend and foe by ear alone. But what if there is no sound to hear? The Night Witches are known to set their engines to idle, gliding towards their targets, where only then do they make a sound. The only thing heard is the soft wind being pushed away as bombs drop, almost akin to broomsticks in the sky."/>
     <entry name="AstraMilitarum/HarassEnemies" value="Harassment Sortie"/>
     <entry name="AstraMilitarum/HarassEnemiesDescription" value="Target an enemy unit. Infantry within 1 tile of that unit have reduced combat effectiveness."/>
-    <entry name="AstraMilitarum/HarassEnemiesFlavor" value=""/>
+    <entry name="AstraMilitarum/HarassEnemiesFlavor" value="Though limited in arms, bullets are still bullets. Sleeping soldiers will wake and take cover if any strafing run comes, for they have no way of knowing if it's an ancient aircraft with one gun or some insane Mechanicus bullshit beast with bolters sticking out the ass."/>
     <entry name="AstraMilitarum/LoadExtraAmmo" value="Load Additional Ammo"/>
     <entry name="AstraMilitarum/LoadExtraAmmoDescription" value="<string name='Traits/AstraMilitarum/LoadExtraAmmoDescription'/>"/>
-    <entry name="AstraMilitarum/LoadExtraAmmoFlavor" value=""/>
+    <entry name="AstraMilitarum/LoadExtraAmmoFlavor" value="There are times when killing the enemy is more important than surviving. Even old machines can be equipped with additional weapons and ammo when long-term performance and speed are of little concern."/>
 </language>
