--- a/Valhallan Ice Warriors/Data/Core/Languages/English/Traits.xml
+++ b/Valhallan Ice Warriors/Data/Core/Languages/English/Traits.xml
@@ -15,7 +15,7 @@
     <entry name="AstraMilitarum/ConscriptsFlavor" value="Degenerates and criminals may not be able to produce much value in a manufactorum, but they're still useful as somewhat warm bodies to throw at machine gun nests. Nobody will miss them, but nearby units may find their equipment missing if they don't watch out for conniving conscripts. Even if they don't steal everything that isn't nailed down, conscripts cannot be relied upon to die standing for the Emperor. When the going is rough, they're known to flee, and whether the Commissars can cut them down fast enough or not, the unit is lost either way."/>
     <entry name="AstraMilitarum/ValhallanSniper" value="Urban Marksmen"/>
     <entry name="AstraMilitarum/ValhallanSniperDescription" value="Increased effectiveness against enemy infantry in Cities, Imperial Ruins, or Outposts (not counting grenades)."/>
-    <entry name="AstraMilitarum/ValhallanSniperFlavor" value=""/>
+    <entry name="AstraMilitarum/ValhallanSniperFlavor" value="Nobody is safe from Valhallan Sharpshooters in their home turf, and they make sure everyone knows that. Officers and weapon specialists are obvious targets, but even typical grunts can find themselves bleeding out with a gut shot. While it's not the best move tactically, fear spreads faster than even promethium-fuelled flames."/>
     <entry name="AstraMilitarum/ValhallanShockTrooper" value="Urban Shock Troops"/>
     <entry name="AstraMilitarum/ValhallanShockTrooperDescription" value="Takes less damage when moving. Increased effectiveness against enemy units (besides the Headquarters itself) in Cities, Imperial Ruins, or Outposts."/>
     <entry name="AstraMilitarum/ValhallanShockTrooperFlavor" value=""/>
