--- a/Valhallan Ice Warriors/Data/Core/Languages/English/Units.xml
+++ b/Valhallan Ice Warriors/Data/Core/Languages/English/Units.xml
@@ -42,10 +42,10 @@
     <!-- Heroes -->
     <entry name="AstraMilitarum/ValhallanCommissar" value="Valhallan Commissar"/>
     <entry name="AstraMilitarum/ValhallanCommissarDescription" value="Hero unit that provides passive bonuses to nearby allied units, with increased bonuses for Valhallans. Buff radius is increased on upgrade"/>
-    <entry name="AstraMilitarum/ValhallanCommissarFlavor" value=""/>
+    <entry name="AstraMilitarum/ValhallanCommissarFlavor" value="Valhallan Commissars are ruthless and capable of projecting their authority across the frontline, with few (famous) exceptions. While one person cannot monitor multiple platoons, snitches and deputised gunners help plug in the gaps."/>
     <entry name="AstraMilitarum/ValhallanBarrierSquad" value="Valhallan Barrier Squad"/>
     <entry name="AstraMilitarum/ValhallanBarrierSquadDescription" value="Support infantry unit that buffs allied infantry within 3 tiles. Their combat effectiveness is low, but they can very effectively execute allied infantry."/>
-    <entry name="AstraMilitarum/ValhallanBarrierSquadFlavor" value=""/>
+    <entry name="AstraMilitarum/ValhallanBarrierSquadFlavor" value="Order 227"/>
     <entry name="AstraMilitarum/ValhallanCommander" value="Valhallan Marshal"/>
     <entry name="AstraMilitarum/ValhallanCommanderDescription" value="Hero unit that provides defensive buffs to allied infantry, with increased bonuses for Valhallans."/>
     <entry name="AstraMilitarum/ValhallanCommanderFlavor" value=""/>
