--- a/Valhallan Ice Warriors/Data/Core/Languages/English/Units.xml
+++ b/Valhallan Ice Warriors/Data/Core/Languages/English/Units.xml
@@ -34,10 +34,10 @@
     <entry name="AstraMilitarum/ValhallanMortarTeamDescription" value="Infantry unit armed with versatile artillery."/>
     <entry name="AstraMilitarum/ValhallanMortarTeamFlavor" value="Before an infantry charge, it's best to soften them up with artillery. However, traditional artillery may be destroyed by counter batteries or are otherwise unavailable. Mortar teams are readily available and can quickly lob shells from right behind the frontline."/>
     <entry name="AstraMilitarum/ValhallanShockTroops" value="Valhallan Shock Army Troopers"/>
-    <entry name="AstraMilitarum/ValhallanShockTroopsDescription" value="Elite shock infantry unit. Most effective against light infantry."/>
+    <entry name="AstraMilitarum/ValhallanShockTroopsDescription" value="Elite shock infantry unit armed with bayonets. Most effective against light infantry."/>
     <entry name="AstraMilitarum/ValhallanShockTroopsFlavor" value="High command noticed that a wave of infantry wasn't always the most efficient method of taking an entrenched position. Many commanders didn't care. A taken position was a taken position afterall. A few, not wanting to waste the Emperor's currency, secretly formulated plans to train specialised units to lead the attack more effectively. These became the Shock Armies, and they were given better equipment and trained to close the distance by using cover."/>
     <entry name="AstraMilitarum/ValhallanVeteran" value="Valhallan Veteran Frontoviki"/>
-    <entry name="AstraMilitarum/ValhallanVeteranDescription" value="Elite infantry unit that can use melta bombs and anti-tank rifles. Resists damage when adjacent to allies and can use Rapid Fire at all ranges when not moving."/>
+    <entry name="AstraMilitarum/ValhallanVeteranDescription" value="Elite infantry unit armed with bayonets that can use melta bombs and anti-tank rifles. Resists damage when adjacent to allies and can use Rapid Fire at all ranges when not moving."/>
     <entry name="AstraMilitarum/ValhallanVeteranFlavor" value="In the regiment where lives are thrown away carelessly, fear the veterans. They are the hardiest and deadliest among the Valhallan Ice Warriors, having survived the toughest battles. Only once they have been forged by the frontline may they earn the name Frontovik."/>
     <!-- Heroes -->
     <entry name="AstraMilitarum/ValhallanCommissar" value="Valhallan Commissar"/>
