--- a/Valhallan Ice Warriors/Data/Core/Languages/English/Units.xml
+++ b/Valhallan Ice Warriors/Data/Core/Languages/English/Units.xml
@@ -31,7 +31,7 @@
     <entry name="AstraMilitarum/ValhallanAntiTankDogsMeltaDescription" value="Dogs strapped with Melta Bombs. Unit is killed upon attacking."/>
     <entry name="AstraMilitarum/ValhallanAntiTankDogsMeltaFlavor" value="&quot;After-action Report Sigma-Gamma 83: Sergeant Kowalski's hounds completely disabled a heretic Land Raider. Upon pict-caster analysis, footage shows Kowalski had armed his dogs with melta bombs. Investigations revealed these were stolen from a nearby Adepta Sororitas stronghold. While the results speak for themselves, theft from the Emperor's inventory must be punished. Verdict: post-humously award the dogs and reassign the Sergeant to a penal battalion.&quot;"/>
     <entry name="AstraMilitarum/ValhallanMortarTeam" value="Valhallan Mortar Team"/>
-    <entry name="AstraMilitarum/ValhallanMortarTeamDescription" value="Infantry unit armed with versatile artillery."/>
+    <entry name="AstraMilitarum/ValhallanMortarTeamDescription" value="Infantry unit armed with versatile artillery. This unit is weaker when alone."/>
     <entry name="AstraMilitarum/ValhallanMortarTeamFlavor" value="Before an infantry charge, it's best to soften them up with artillery. However, traditional artillery may be destroyed by counter batteries or are otherwise unavailable. Mortar teams are readily available and can quickly lob shells from right behind the frontline."/>
     <entry name="AstraMilitarum/ValhallanShockTroops" value="Valhallan Shock Army Troopers"/>
     <entry name="AstraMilitarum/ValhallanShockTroopsDescription" value="Elite shock infantry unit armed with bayonets. Most effective against light infantry."/>
